fix: improve responsiveness of 'profile' block when overflowing at a width of 600px and more

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,6 +1,8 @@
 .profile__add-button {
   position: relative;
 
+align-self: center;
+
   box-sizing: border-box;
   width: 100%;
   height: 50px;
@@ -46,8 +48,6 @@
 
 @media screen and (min-width: 600px) {
   .profile__add-button {
-
-
     max-width: 150px;
     margin: 0;
     margin-left: auto;
