--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,7 @@
 .profile__edit-button {
   position: absolute;
   right: calc((18px + 10px) * -1);
-  bottom: 46%;
+  top: 8px;
 
   width: 18px;
   height: 18px;
@@ -20,6 +20,7 @@
 @media screen and (min-width: 600px) {
   .profile__edit-button {
     right: calc((24px + 18px) * -1);
+    top: 16px;
 
     width: 24px;
     height: 24px;
