--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,10 +1,13 @@
 .profile__info {
+  position: relative;
+
   margin-top: 26px;
 }
 
 @media screen and (min-width: 600px) {
   .profile__info {
     margin: 0;
+    margin-right: 80px;
     margin-left: 30px;
   }
 }
