--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,6 +1,4 @@
 .profile__name {
-  position: relative;
-
   margin: 0 auto;
   padding: 0;
 
