--- a/blocks/profile/__photo/profile__photo.css
+++ b/blocks/profile/__photo/profile__photo.css
@@ -1,6 +1,3 @@
 .profile__photo {
   display: block;
-  flex-basis: 120px;
-
-  height: auto;
 }
