--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -7,6 +7,7 @@
 @media screen and (min-width: 600px) {
   .profile {
     justify-content: flex-start;
+    align-items: flex-start;
     flex-direction: row;
   }
 }
